# aqi-prediction-mlops

./: .dockerignore  .dvcignore  .env.example  .gitattributes  .gitignore  .railwayignore  Dockerfile  README.md  ReadMe.md  app.py  docker-compose.yml  dvc.yaml  energy.ipynb  fix_mutual_info.py  fix_params_path.sh  main.py  mlflow.db  params.yaml  pyproject.toml  quickstart_deploy.sh  railway.json  railway.toml  render.yaml  requirements-api.txt  requirements-dev.txt  requirements-full.txt  requirements.txt  setup.py  setup_dvc_remote.sh
.dvc/: config
.github/workflows/: ci-cd.yml  ci.yml  deploy-railway.yml  deploy-render.yml  docker-deploy.yml  test-api.yml  validate-model.yml
app/: main.py  predictor.py  requirements.txt
configs/: cities.yaml
models/: model_comparison.csv
models/optimized/: features.txt  model_final.pkl  model_metadata.json
scripts/: build_docker.sh  deploy_railway.sh  make_executable.sh  setup_dagshub.sh  setup_railway.sh  start_api.sh  test_api.sh  test_environment.sh  train_pipeline.sh
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py  models.py
src/components/: __init__.py  data_ingestion.py  data_preprocessing.py  data_splitting.py  feature_engineering.py  feature_selection.py  model_evaluator.py  model_optimizer.py  model_trainer.py
src/inference/: __init__.py  live_predictor.py  model_loader.py
src/pipeline/: __init__.py  stage_01_data_ingestion.py  stage_02_data_preprocessing.py  stage_03_feature_engineering.py  stage_04_feature_selection.py  stage_05_data_splitting.py  stage_06_model_training.py  stage_07_model_optimization.py  stage_08_model_evaluation.py  stage_09_prediction_comparison.py  stage_data_ingestion.py  stage_data_preprocessing.py  stage_data_splitting.py  stage_feature_engineering.py  stage_feature_selection.py  stage_model_optimization.py  (+1 more)
(+8 files in other folders)
